# Luma

./: README.md  ast_8h.html  ast_8h_source.html  ast__utils_8h_source.html  config.default.mk  doc__generator_8h_source.html  error_8h_source.html  formatter_8h_source.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_a.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_g.html  functions_vars_i.html  functions_vars_l.html  functions_vars_m.html  functions_vars_p.html  functions_vars_r.html  functions_vars_s.html  functions_vars_t.html  (+47 more)
.github/workflows/: build.yml
scripts/: attach_to_lsp.sh  test_lsp.sh  test_partial.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  all_d.js  defines_9.js  enumvalues_0.js  enumvalues_9.js  functions_0.js  functions_10.js  functions_2.js  functions_9.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_12.js  variables_13.js  variables_14.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_9.js  variables_b.js  variables_c.js  (+1 more)
src/ast/: ast.h
src/ast/ast_definistions/: preprocessor.c
src/helper/: help.h  run.c
src/lexer/: lexer.c  lexer.h
src/llvm/: llvm.h
src/llvm/core/: llvm.c  lookup.c
src/llvm/expr/: expr.c
src/llvm/module/: module_handles.c
src/llvm/stmt/: stmt.c
src/lsp/: lsp.h  lsp_document.c  lsp_features.c  lsp_json.c  lsp_message.c  lsp_module.c  lsp_semantic_tokens.c  lsp_server.c  lsp_symbols.c
src/lsp/language-support/: luma-language-support-0.1.5.vsix
src/lsp/language-support/client/src/: extension.ts
src/parser/: parser.c  parser.h  stmt.c
src/typechecker/: module.c  scope.c  stmt.c  tc.c  type.h
std/: libc.lx  thread.lx  vector.lx
